<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back14"
    tools:context=".LoginSignUp.signupActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="14dp"
        android:backgroundTint="#33ffffff"
        android:ems="10"
        android:fontFamily="@font/josefin_regular"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Full_name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="370dp"
        android:layout_height="47dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        android:backgroundTint="#33ffffff"
        android:ems="10"
        android:fontFamily="@font/josefin_regular"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/c_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_no" />

    <EditText
        android:id="@+id/c_pass"
        android:layout_width="370dp"
        android:layout_height="47dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#33ffffff"
        android:ems="10"
        android:fontFamily="@font/josefin_regular"
        android:hint="@string/hint_password_confirm"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/Full_name"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="#33ffffff"
        android:ems="10"
        android:fontFamily="@font/josefin_regular"
        android:hint="Full Name"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/take_picture" />

    <EditText
        android:id="@+id/add"
        android:layout_width="372dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#33ffffff"
        android:ems="10"
        android:fontFamily="@font/josefin_regular"
        android:hint="Address"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_pass" />

    <Button
        android:id="@+id/sign"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="121dp"
        android:background="@drawable/button_background_fill"
        android:fontFamily="@font/josefin_bold"
        android:text="@string/btn_signup"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <TextView
        android:id="@+id/login"
        android:layout_width="131dp"
        android:layout_height="51dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="25dp"
        android:autofillHints=""
        android:fontFamily="@font/josefin_bold"
        android:text="@string/text_signin"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign" />

    <ImageView
        android:id="@+id/take_picture"
        android:layout_width="72dp"
        android:layout_height="91dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="76dp"
        android:src="@drawable/shopon3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TakePicture"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="63dp"
        android:fontFamily="@font/calibri"
        android:text="SHOPON"
        android:textColor="#131313"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/Full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/take_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mobile_no"
        android:layout_width="358dp"
        android:layout_height="44dp"

        android:layout_marginStart="27dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="26dp"
        android:backgroundTint="#33ffffff"
        android:ems="10"
        android:fontFamily="@font/josefin_regular"
        android:hint="Enter Your Mobile No"
        android:inputType="textPersonName|phone"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />


</android.support.constraint.ConstraintLayout>